// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-item-member-group should get multiple member groups by ID 1`] = `
[
  {
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test Item Member Group 1",
  },
  {
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test Item Member Group 2",
  },
]
`;

exports[`get-item-member-group should get no member groups for empty request 1`] = `[]`;

exports[`get-item-member-group should get single member group by ID 1`] = `
[
  {
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test Item Member Group 1",
  },
]
`;
